fix button contrast

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 --bg:#0f172a;
 --card:#1e293b;
 --text:#ffffff;
---primary:#38bdf8;
+--primary:#0369a1;
 }
 
 [data-theme="light"]{
@@ -209,7 +209,4 @@ padding-left:20px;
 .about-list li{
 margin-bottom:12px;
 font-size:1rem;
-}
-:root{
-    --primary:#0369a1;
 }
